# cargo-mcp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/: copilot-instructions.md
.github/actions/workspace-version/: action.yml
.github/workflows/: build-extension.yml  ci.yml  publish-extension.yml  release-please.yml
crates/cargo-mcp/: CHECKLIST.md  COMPLETED-CHECKLIST.md  Cargo.toml  DESIGN-NOTES.md  README.md
crates/cargo-mcp/extension/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
crates/cargo-mcp/extension/src/: extension.ts
crates/cargo-mcp/src/: busy_files.rs  elicit.rs  invoke.rs  line_reader.rs  main.rs  nextest.rs  suggest.rs  test_filter.rs  tools.rs
crates/cargo-mcp/src/rm/: mod.rs
crates/cargo-mcp/tests/: invoke_timeout.rs  rm_end_to_end.rs  rm_subprocess_e2e.rs  rm_who_holds.rs
crates/rm-test-helpers/: Cargo.toml
crates/rm-test-helpers/src/: hold_file.rs  sleeper.rs  target_sniffer.rs
tools/: check-encoding.ps1  make-extension-placeholder-images.ps1  rewrite-tools-rs.ps1
