# Copyright (c) 2026, Michael Grier

[workspace]
members = [
    "crates/cargo-mcp",
    "crates/rm-test-helpers",
]
resolver = "2"

[workspace.package]
version       = "0.5.4" # x-release-please-version
authors       = ["Mike Grier"]
edition       = "2024"
rust-version  = "1.93"
license       = "MIT"
repository    = "https://github.com/MikeGrier/cargo-mcp-rs"
homepage      = "https://github.com/MikeGrier/cargo-mcp-rs"
documentation = "https://docs.rs/cargo-mcp"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Release profile: tuned for shipped binary size (bundled inside the VS Code
# extension VSIX).
#
# - `strip = "symbols"` removes debug symbols; typically halves a Rust Windows binary.
# - `lto = "thin"` enables cross-crate inlining/dead-code elimination at link time.
# - `codegen-units = 1` lets LLVM see the whole crate at once for better optimisation.
[profile.release]
strip         = "symbols"
lto           = "thin"
codegen-units = 1
