# Copyright (c) Michael Grier. All rights reserved.

[package]
name                 = "cargo-mcp"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
documentation.workspace = true
description = "Model Context Protocol (MCP) server that exposes cargo commands (check, build, test, clippy, fmt, doc, tree, ...) as structured tools for AI coding agents like GitHub Copilot."
readme      = "README.md"
keywords    = ["cargo", "mcp", "copilot", "llm", "ai"]
categories  = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
exclude     = [
    "extension/",
    "tests/",
    "CHECKLIST.md",
    "COMPLETED-CHECKLIST.md",
    "DESIGN-NOTES.md",
]

[[bin]]
name = "cargo-mcp"
path = "src/main.rs"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }

# Windows-only Restart Manager bindings, used by `src/rm/` to ask the OS
# which process is holding a file in `target\` open after a sharing
# violation. Confined to a single submodule so the rest of the crate
# stays `unsafe`-free; gated on `cfg(windows)` so non-Windows builds
# don't pull it.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_RestartManager",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Security",
] }

# Unix-only: used by `invoke::ManagedChild` to send SIGKILL to the entire
# process group of a spawned cargo subprocess, so cancelling `cargo test`
# also stops the test binary cargo spawned underneath it.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
