# Copyright (c) Michael Grier. All rights reserved.
#
# Test-only helper binaries used by `cargo-mcp`'s integration tests to
# exercise the Restart Manager wrapper (`crate::rm`) and the
# retry-on-busy code path. Not published.

[package]
name = "rm-test-helpers"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "rm-hold-file"
path = "src/hold_file.rs"

[[bin]]
name = "rm-target-sniffer"
path = "src/target_sniffer.rs"

# Cross-platform sleeper used as a fake `cargo` shim by cargo-mcp's
# `invoke_timeout` integration test.
[[bin]]
name = "rm-sleeper"
path = "src/sleeper.rs"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }
